<resources>
    <string name="app_name">StopwatchEmpatica</string>
    <string name="home_screen">Home</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="distance">Distance</string>
    <string name="input_helper">Input the lap distance in meters</string>
    <string name="next">Continue →</string>
    <string name="back">←</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="lap">Lap</string>
    <string name="reset">Reset</string>
    <string name="start_time">00:00:00</string>
    <string name="metrics">Metrics</string>
    <string name="laps">Laps</string>
    <string name="avg_time_lap">Avg. Time/Lap</string>
    <string name="avg_speed">Avg. Speed</string>
    <string name="peak_speed">Peak Speed</string>
    <string name="cadence">Cadence</string>
    <string name="end">End training session</string>
    <string name="explosiveness">Explosiveness</string>
    <string name="endurance">Endurance</string>
    <string name="alert_csv">Your CSV is ready</string>
</resources>