<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/item_football_player"
                layout="@layout/item_football_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/stopwatch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/stopwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/start_time"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_lap"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lap"
                app:layout_constraintEnd_toStartOf="@id/btn_start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stopwatch" />

            <Button
                android:id="@+id/btn_start"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_lap"
                app:layout_constraintTop_toBottomOf="@+id/stopwatch" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:dividerColor="@color/md_theme_light_primaryContainer"
                app:layout_constraintTop_toBottomOf="@id/btn_lap" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_laps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:listitem="@layout/item_lap" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_laps">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_metrics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/robotoflex"
                    android:text="@string/metrics"
                    android:textColor="@color/md_theme_light_onPrimary"
                    android:textFontWeight="600"
                    android:textSize="30sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_laps_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/robotoflex"
                            android:textColor="@color/md_theme_light_onPrimary"
                            android:textFontWeight="400"
                            android:textSize="25sp"
                            tools:text="10" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_laps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/robotoflex"
                            android:text="@string/laps"
                            android:textColor="@color/md_theme_light_primaryContainer"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_avg_time_lap_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/robotoflex"
                            android:textColor="@color/md_theme_light_onPrimary"
                            android:textFontWeight="400"
                            android:textSize="25sp"
                            tools:text="10" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_avg_time_lap"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/robotoflex"
                            android:text="@string/avg_time_lap"
                            android:textColor="@color/md_theme_light_primaryContainer"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_avg_speed_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/robotoflex"
                            android:textColor="@color/md_theme_light_onPrimary"
                            android:textFontWeight="400"
                            android:textSize="25sp"
                            tools:text="10" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_avg_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/robotoflex"
                            android:text="@string/avg_speed"
                            android:textColor="@color/md_theme_light_primaryContainer"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_peak_speed_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/robotoflex"
                            android:textColor="@color/md_theme_light_onPrimary"
                            android:textFontWeight="400"
                            android:textSize="25sp"
                            tools:text="10" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_peak_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/robotoflex"
                            android:text="@string/peak_speed"
                            android:textColor="@color/md_theme_light_primaryContainer"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_cadence_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/robotoflex"
                            android:textColor="@color/md_theme_light_onPrimary"
                            android:textFontWeight="400"
                            android:textSize="25sp"
                            tools:text="10" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_cadence"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/robotoflex"
                            android:text="@string/cadence"
                            android:textColor="@color/md_theme_light_primaryContainer"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>